# ocean

./: CMakeLists.txt  README.md
include/: constants.hpp  entity.hpp  ocean.hpp  texture_mgr.hpp
include/entities/: algae.hpp  crab.hpp  herbivore.hpp  predator.hpp
include/utils/: logger.hpp  rng.hpp
src/: algae.cpp  crab.cpp  herbivore.cpp  main.cpp  ocean.cpp  predator.cpp  texture_mgr.cpp
